--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
         "aws-sdk": "^2.198.0",
         "babel-runtime": "^6.26.0",
         "body-parser": "^1.18.2",
+        "dynamoose": "^0.8.7",
         "express": "^4.16.3",
+        "serverless-dynamodb-local": "^0.2.28",
         "serverless-http": "^1.5.5"
     },
     "devDependencies": {
