--- a/serverless.yml
+++ b/serverless.yml
@@ -3,22 +3,38 @@ frameworkVersion: '=1.26.1'
 
 plugins:
   - serverless-webpack
-  - serverless-offline
+  - serverless-dynamodb-local
+  - serverless-offline # must be last
 
 custom:
   webpackIncludeModules: true
+  stage: ${opt:stage, self:provider.stage}
+  storeTable: '${self:service}-store-table-${self:custom.stage}'
+  dynamodb:
+    start:
+      port: 8000
+      migrate: true
+      inMemory: true
 
 provider:
   name: aws
+  region: us-east-1
   runtime: nodejs6.10
   memorySize: 512
   timeout: 30
   iamRoleStatements:
     - Effect: Allow
       Action:
-        - lambda:InvokeFunction
-      Resource: '*'
+        - dynamodb:Query
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+        - dynamodb:UpdateItem
+        - dynamodb:DeleteItem
+      Resource:
+        - { "Fn::GetAtt": ["StoreTable", "Arn" ] }
   environment:
+    STORE_TABLE: ${self:custom.storeTable}
     LAMBDA_PREFIX: 'bundlesize-service-${opt:stage, self:provider.stage}-'
 
 functions:
@@ -29,3 +45,25 @@ functions:
       - http:
           path: /
           method: get
+      - http:
+          path: /store
+          method: post
+
+resources:
+  Resources:
+    StoreTable:
+      Type: 'AWS::DynamoDB::Table'
+      DeletionPolicy: Retain
+      Properties:
+        AttributeDefinitions:
+          -
+            AttributeName: id
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: id
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 1
+          WriteCapacityUnits: 1
+        TableName: ${self:custom.storeTable}
