--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     ],
     "dependencies": {
         "aws-sdk": "^2.198.0",
+        "axios": "^0.18.0",
         "babel-runtime": "^6.26.0",
         "body-parser": "^1.18.2",
         "dynamoose": "^0.8.7",
