--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,5 +1,15 @@
 version: 2
 jobs:
+  greenkeeper:
+      docker:
+          - image: circleci/node:6.10.3
+        working_directory: ~/workspace
+        steps:
+          - checkout
+          - greenkeeper-lockfile-update
+          - greenkeeper-lockfile-upload
+
+
   build:
     docker:
       - image: circleci/node:6.10.3
@@ -61,7 +71,11 @@ workflows:
   version: 2
   build_and_deploy:
     jobs:
-      - build
+      - greenkeeper:
+        contexts: greenkeeper
+      - build:
+        requires:
+            - greenkeeper
       - deploy:
           requires:
             - build
