Added jest and supertest

--- a/.babelrc
+++ b/.babelrc
@@ -5,5 +5,10 @@
           "root": ["./src"]
       }]
   ],
-  "presets": ["env", "stage-3"]
+  "presets": ["env", "stage-3"],
+  "env": {
+    "test": {
+      "plugins": ["transform-es2015-modules-commonjs"]
+    }
+  }
 }
