--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,9 +53,9 @@ jobs:
           name: Install Deployment Dependencies
           command: make install-deployment-deps
 
-#      - run:
-#          name: Deploy Production
-#          command: STAGE=prod make deploy
+      - run:
+          name: Deploy Production
+          command: STAGE=prod make deploy
 
 workflows:
   version: 2
