--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,7 @@ frameworkVersion: '=1.26.1'
 plugins:
   - serverless-webpack
   - serverless-dynamodb-local
+  - serverless-domain-manager
   - serverless-offline # must be last
 
 custom:
@@ -23,6 +24,11 @@ custom:
     dev: ${env:GITHUB_CLIENT_SECRET}
     stage: ${env:GITHUB_CLIENT_SECRET}
     prod: ${env:GITHUB_CLIENT_SECRET}
+  customDomain:
+    domainName: service.bundlesize.io
+    basePath: ''
+    stage: ${self:custom.stage}
+    createRoute53Record: true
 
 provider:
   name: aws
