--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
 
       - run:
           name: Deploy Production
-          command: STAGE=prod sls make deploy
+          command: STAGE=prod make deploy
 
 workflows:
   version: 2
