--- a/package.json
+++ b/package.json
@@ -27,8 +27,11 @@
         "axios": "^0.18.0",
         "babel-runtime": "^6.26.0",
         "body-parser": "^1.18.2",
+        "bytes": "^3.0.0",
         "dynamoose": "^0.8.7",
         "express": "^4.16.3",
+        "jsonpack": "^1.1.5",
+        "mustache-express": "^1.2.5",
         "serverless-dynamodb-local": "^0.2.28",
         "serverless-http": "^1.5.5"
     },
