Build out results page (#5)
* wip

* added styling to details page

* put logo on github CDN

* Tweak result page styling

--- a/serverless.yml
+++ b/serverless.yml
@@ -69,6 +69,14 @@ functions:
       - http:
           path: /github-token
           method: get
+      - http:
+          path: /results
+          method: get
+      - http:
+          path: /static/styles.css
+          method: get
+
+
 
 resources:
   Resources:
