--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "jest": {
         "testEnvironment": "node",
         "noStackTrace": true,
+        "setupFiles": [
+            "./jestSetupFile.js"
+        ],
         "testPathIgnorePatterns": [
             "/node_modules/",
             "/app/"
@@ -30,9 +33,10 @@
         "bytes": "^3.0.0",
         "dynamoose": "^0.8.7",
         "express": "^4.16.3",
+        "express-validator": "^5.1.2",
         "jsonpack": "^1.1.5",
         "mustache-express": "^1.2.5",
-        "serverless-dynamodb-local": "^0.2.28",
+        "serverless-dynamodb-local": "^0.2.30",
         "serverless-http": "^1.5.5"
     },
     "devDependencies": {
@@ -53,13 +57,14 @@
         "file-loader": "^1.1.11",
         "husky": "^0.14.3",
         "jest": "^22.4.3",
+        "joi": "^13.2.0",
         "lint-staged": "^7.0.0",
         "prettier": "^1.10.2",
         "regenerator-runtime": "^0.11.1",
         "serverless": "^1.26.1",
         "serverless-domain-manager": "^2.3.6",
-        "serverless-offline": "^3.18.0",
-        "serverless-webpack": "^4.3.0",
+        "serverless-offline": "^3.20.3",
+        "serverless-webpack": "^5.1.3",
         "supertest": "^3.0.0",
         "webpack": "^3.11.0",
         "webpack-node-externals": "^1.6.0"
