--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/node:6.10.3
+      - image: circleci/node:chakracore-8.10.0
     working_directory: ~/workspace
     steps:
       - checkout
@@ -41,7 +41,7 @@ jobs:
 
   deploy:
     docker:
-      - image: circleci/node:6.10.3
+      - image: circleci/node:chakracore-8.10.0
     working_directory: ~/workspace
     steps:
       - checkout
