--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,7 @@ frameworkVersion: '=1.26.1'
 plugins:
   - serverless-webpack
   - serverless-dynamodb-local
+  - serverless-domain-manager
   - serverless-offline # must be last
 
 custom:
@@ -25,6 +26,11 @@ custom:
     dev: ${env:GITHUB_CLIENT_SECRET}
     stage: ${env:GITHUB_CLIENT_SECRET}
     prod: ${env:GITHUB_CLIENT_SECRET}
+  customDomain:
+    domainName: service.bundlewatch.io
+    basePath: ''
+    stage: ${self:custom.stage}
+    createRoute53Record: true
 
 provider:
   name: aws
@@ -56,9 +62,6 @@ functions:
       - http:
           path: /
           method: get
-      - http:
-          path: /analyze
-          method: post
       - http:
           path: /store
           method: post
