--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
             "./jestSetupFile.js"
         ],
         "testPathIgnorePatterns": [
-            "/node_modules/",
-            "/app/"
+            "/node_modules/"
         ]
     },
     "lint-staged": {
