--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
     "version": "0.0.1",
     "license": "UNLICENSED",
     "scripts": {
-        "precommit": "./infrastructure/check-versions.sh && lint-staged",
-        "test": "jest"
+        "precommit": "./infrastructure/check-versions.sh && lint-staged"
     },
     "jest": {
         "testEnvironment": "node",
@@ -17,13 +16,9 @@
             "node_modules/.bin/eslint"
         ]
     },
-    "moduleRoots": [
-        "src"
-    ],
     "dependencies": {
         "aws-sdk": "^2.198.0",
         "axios": "^0.18.0",
-        "babel-runtime": "^6.26.0",
         "body-parser": "^1.18.2",
         "bytes": "^3.0.0",
         "dynamoose": "^0.8.7",
@@ -36,32 +31,18 @@
         "serverless-http": "^1.5.5"
     },
     "devDependencies": {
-        "babel-core": "^6.26.0",
-        "babel-jest": "^22.4.3",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-module-resolver": "^3.1.0",
-        "babel-plugin-transform-runtime": "^6.23.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-stage-3": "^6.24.1",
-        "copy-webpack-plugin": "^4.5.1",
         "eslint": "^4.9.0",
         "eslint-config-airbnb-base": "^12.1.0",
         "eslint-config-prettier": "^2.9.0",
         "eslint-plugin-import": "^2.7.0",
         "eslint-plugin-jest": "^21.12.2",
         "eslint-plugin-prettier": "^2.6.0",
-        "file-loader": "^1.1.11",
         "husky": "^0.14.3",
         "jest": "^22.4.3",
         "lint-staged": "^7.0.0",
         "prettier": "^1.10.2",
-        "regenerator-runtime": "^0.11.1",
         "serverless": "^1.26.1",
         "serverless-domain-manager": "^2.3.6",
-        "serverless-offline": "^3.20.3",
-        "serverless-webpack": "^5.1.3",
-        "supertest": "^3.0.0",
-        "webpack": "^3.11.0",
-        "webpack-node-externals": "^1.7.2"
+        "serverless-offline": "^3.20.3"
     }
 }
