--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
         "lodash.merge": "^4.6.1",
         "mustache-express": "^1.2.5",
         "serverless-dynamodb-local": "^0.2.30",
-        "serverless-http": "^1.5.5"
+        "serverless-http": "^1.5.5",
+        "uuid": "^3.2.1"
     },
     "devDependencies": {
         "coveralls": "^3.0.1",
