--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
     "name": "bundlewatch-service",
     "version": "0.0.1",
     "license": "UNLICENSED",
-    "scripts": {
-        "precommit": "./infrastructure/check-versions.sh && lint-staged"
+    "husky": {
+        "hooks": {
+            "pre-commit": "./infrastructure/check-versions.sh && lint-staged"
+        }
     },
     "jest": {
         "testEnvironment": "node",
@@ -34,19 +36,19 @@
     },
     "devDependencies": {
         "coveralls": "^3.0.1",
-        "eslint": "^4.18.2",
-        "eslint-config-airbnb-base": "^12.1.0",
-        "eslint-config-prettier": "^2.9.0",
-        "eslint-plugin-import": "^2.7.0",
-        "eslint-plugin-jest": "^21.12.2",
-        "eslint-plugin-prettier": "^2.6.0",
-        "husky": "^0.14.3",
-        "jest": "^22.4.3",
-        "jest-junit": "^4.0.0",
-        "lint-staged": "^7.0.0",
-        "prettier": "^1.10.2",
-        "serverless": "^1.26.1",
-        "serverless-domain-manager": "^2.3.6",
-        "serverless-offline": "^3.20.3"
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb-base": "^13.2.0",
+        "eslint-config-prettier": "^6.0.0",
+        "eslint-plugin-import": "^2.18.0",
+        "eslint-plugin-jest": "^22.7.2",
+        "eslint-plugin-prettier": "^3.1.0",
+        "husky": "^3.0.0",
+        "jest": "^24.8.0",
+        "jest-junit": "^6.4.0",
+        "lint-staged": "^9.2.0",
+        "prettier": "^1.18.2",
+        "serverless": "^1.47.0",
+        "serverless-domain-manager": "^3.2.6",
+        "serverless-offline": "^5.7.3"
     }
 }
