--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "serverless-http": "^1.5.5"
     },
     "devDependencies": {
+        "babel-eslint": "^10.0.2",
         "coveralls": "^3.0.1",
         "eslint": "^5.16.0",
         "eslint-config-airbnb-base": "^13.2.0",
