--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
         ]
     },
     "dependencies": {
+        "@hapi/joi": "^15.1.0",
         "aws-sdk": "^2.198.0",
         "axios": "^0.19.0",
         "body-parser": "^1.18.2",
         "bytes": "^3.0.0",
         "dynamoose": "^1.10.0",
         "express": "^4.16.3",
-        "joi": "^14.3.0",
         "jsonpack": "^1.1.5",
         "lodash.merge": "^4.6.2",
         "mustache-express": "^1.2.5",
