--- a/serverless.yml
+++ b/serverless.yml
@@ -31,7 +31,7 @@ custom:
 provider:
   name: aws
   region: us-east-1
-  runtime: nodejs12.*
+  runtime: nodejs12.x
   memorySize: 512
   timeout: 30
   iamRoleStatements:
