--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
     "name": "bundlewatch-service",
     "version": "0.0.1",
     "license": "UNLICENSED",
+    "scripts": {
+        "postinstall": "yarn-deduplicate"
+    },
     "husky": {
         "hooks": {
             "pre-commit": "./infrastructure/check-versions.sh && lint-staged"
