--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
         "bytes": "^3.0.0",
         "dynamoose": "^1.11.1",
         "express": "^4.16.3",
-        "jsonpack": "^1.1.5",
         "lodash.merge": "^4.6.2",
+        "lz-string": "^1.4.4",
         "mustache-express": "^1.3.0",
         "serverless-dynamodb-local": "^0.2.39",
         "serverless-http": "^2.7.0"
