--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,75 +1,68 @@
-version: 2
+version: 2.1
+
+working_directory: &working_directory ~/bundlewatch-service
+
+executors:
+    node:
+        docker:
+            - image: cimg/node:14.18.3
+        working_directory: *working_directory
+
 jobs:
-  build:
-    docker:
-      - image: circleci/node:12.14.1
-    working_directory: ~/workspace
-    steps:
-      - checkout
-
-      - restore_cache:
-          keys:
-            - deps-v1-{{ checksum "yarn.lock" }}
-
-      - run:
-          name: Install Dependencies
-          command: make install-no-clean
-
-      - save_cache:
-          paths:
-            - node_modules
-          key: deps-v1-{{ checksum "yarn.lock" }}
-
-      - run:
-          name: Lint
-          command: make lint
-          when: always
-
-      - run:
-          name: Test
-          command: make test
-          when: always
-
-      - run:
-          name: Package functions
-          command: make package
-          when: always
-
-      - store_artifacts:
-          path: artifacts
-
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - artifacts/
-            - node_modules/
-
-  deploy:
-    docker:
-      - image: circleci/node:12.14.1
-    working_directory: ~/workspace
-    steps:
-      - checkout
-
-      - attach_workspace:
-          at: ~/workspace
-
-      - run:
-          name: Install Deployment Dependencies
-          command: make install-deployment-deps
-
-      - run:
-          name: Deploy Production
-          command: STAGE=prod make deploy
+    build:
+        executor: node
+        steps:
+            - checkout
+            - restore_cache:
+                  name: Restore Yarn Package Cache
+                  keys:
+                      - yarn-packages-{{ checksum "yarn.lock" }}
+            - run:
+                  name: Install Dependencies
+                  command: make install-no-clean
+            - save_cache:
+                  key: yarn-packages-{{ checksum "yarn.lock" }}
+                  paths:
+                      - ~/.cache/yarn
+            - run:
+                  name: Lint
+                  command: make lint
+                  when: always
+            - run:
+                  name: Test
+                  command: make test
+                  when: always
+            - run:
+                  name: Package functions
+                  command: make package
+                  when: always
+            - store_artifacts:
+                  path: artifacts
+            - persist_to_workspace:
+                  root: ./
+                  paths:
+                      - artifacts/
+                      - node_modules/
+    deploy:
+        executor: node
+        steps:
+            - checkout
+            - attach_workspace:
+                  at: *working_directory
+            - run:
+                  name: Install Deployment Dependencies
+                  command: make install-deployment-deps
+            - run:
+                  name: Deploy Production
+                  command: STAGE=prod make deploy
 
 workflows:
-  version: 2
-  build_and_deploy:
-    jobs:
-      - build
-      - deploy:
-          requires:
+    build_and_deploy:
+        jobs:
             - build
-          filters:
-            branches:
-              only: master
+            - deploy:
+                  requires:
+                      - build
+                  filters:
+                      branches:
+                          only: master
