--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
         "prettier": "^2.2.1",
         "serverless": "^2.72.1",
         "serverless-domain-manager": "^5.4.1",
+        "serverless-git-info": "^1.2.4",
         "serverless-offline": "^8.3.1",
         "yarn-deduplicate": "^3.1.0"
     }
