--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: bundlewatch-service
-frameworkVersion: '3'
+frameworkVersion: '2'
 
 plugins:
     - serverless-dynamodb-local
@@ -33,24 +33,22 @@ custom:
 provider:
     name: aws
     region: us-east-1
-    runtime: nodejs20.x
+    runtime: nodejs14.x
     lambdaHashingVersion: '20201221'
     memorySize: 512
     timeout: 29
-    iam:
-        role:
-            statements:
-                - Effect: Allow
-                  Action:
-                      - dynamodb:Query
-                      - dynamodb:Scan
-                      - dynamodb:GetItem
-                      - dynamodb:PutItem
-                      - dynamodb:UpdateItem
-                      - dynamodb:DeleteItem
-                      - dynamodb:DescribeTable
-                  Resource:
-                      - { 'Fn::GetAtt': ['StoreTable', 'Arn'] }
+    iamRoleStatements:
+        - Effect: Allow
+          Action:
+              - dynamodb:Query
+              - dynamodb:Scan
+              - dynamodb:GetItem
+              - dynamodb:PutItem
+              - dynamodb:UpdateItem
+              - dynamodb:DeleteItem
+              - dynamodb:DescribeTable
+          Resource:
+              - { 'Fn::GetAtt': ['StoreTable', 'Arn'] }
     environment:
         STORE_TABLE: ${self:custom.storeTable}
         GITHUB_CLIENT_ID: ${self:custom.githubClientId.${self:custom.stage}}
@@ -61,28 +59,28 @@ functions:
     expressRouter:
         handler: src/router/index.app
         events:
-            - httpApi:
+            - http:
                   path: /
                   method: get
-            - httpApi:
+            - http:
                   path: /store
                   method: post
-            - httpApi:
+            - http:
                   path: /store/lookup
                   method: post
-            - httpApi:
+            - http:
                   path: /setup-github
                   method: get
-            - httpApi:
+            - http:
                   path: /results
                   method: get
-            - httpApi:
+            - http:
                   path: /static/results-styles.css
                   method: get
-            - httpApi:
+            - http:
                   path: /static/setup-github-styles.css
                   method: get
-            - httpApi:
+            - http:
                   path: /analyze
                   method: post
 
