--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,5 @@
 service: bundlewatch-service
-frameworkVersion: '2'
+frameworkVersion: '3'
 
 plugins:
     - serverless-dynamodb-local
@@ -28,27 +28,31 @@ custom:
         basePath: ''
         stage: ${self:custom.stage}
         createRoute53Record: true
+        endpointType: regional
+        apiType: http
     gitSha1: ${git:sha1} # git rev-parse --short HEAD
 
 provider:
     name: aws
     region: us-east-1
-    runtime: nodejs14.x
+    runtime: nodejs20.x
     lambdaHashingVersion: '20201221'
     memorySize: 512
     timeout: 29
-    iamRoleStatements:
-        - Effect: Allow
-          Action:
-              - dynamodb:Query
-              - dynamodb:Scan
-              - dynamodb:GetItem
-              - dynamodb:PutItem
-              - dynamodb:UpdateItem
-              - dynamodb:DeleteItem
-              - dynamodb:DescribeTable
-          Resource:
-              - { 'Fn::GetAtt': ['StoreTable', 'Arn'] }
+    iam:
+        role:
+            statements:
+                - Effect: Allow
+                  Action:
+                      - dynamodb:Query
+                      - dynamodb:Scan
+                      - dynamodb:GetItem
+                      - dynamodb:PutItem
+                      - dynamodb:UpdateItem
+                      - dynamodb:DeleteItem
+                      - dynamodb:DescribeTable
+                  Resource:
+                      - { 'Fn::GetAtt': ['StoreTable', 'Arn'] }
     environment:
         STORE_TABLE: ${self:custom.storeTable}
         GITHUB_CLIENT_ID: ${self:custom.githubClientId.${self:custom.stage}}
@@ -59,28 +63,28 @@ functions:
     expressRouter:
         handler: src/router/index.app
         events:
-            - http:
+            - httpApi:
                   path: /
                   method: get
-            - http:
+            - httpApi:
                   path: /store
                   method: post
-            - http:
+            - httpApi:
                   path: /store/lookup
                   method: post
-            - http:
+            - httpApi:
                   path: /setup-github
                   method: get
-            - http:
+            - httpApi:
                   path: /results
                   method: get
-            - http:
+            - httpApi:
                   path: /static/results-styles.css
                   method: get
-            - http:
+            - httpApi:
                   path: /static/setup-github-styles.css
                   method: get
-            - http:
+            - httpApi:
                   path: /analyze
                   method: post
 
